[package]
name = "parallel_vec"
version = "0.1.0"
edition = "2021"
authors = ["Hourai Teahouse Developers <contact@houraiteahouse.net>"]
description = "A generic contiguous collection of heterogenous values."
homepage = "https://github.com/HouraiTeahouse/parallel_vec"
repository = "https://github.com/HouraiTeahouse/parallel_vec"
readme = "README.md"
keywords = ["ecs", "structures-of-arrays", "vec"]
categories = ["data-structures", "no-std"]
license = "MIT OR Apache 2.0"

[features]
default = ["std"]
std = []